projects/grpcserver/envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: gloo-webgrpc
            virtual_hosts:
            - name: gloo-webgrpc
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                  headers:
                  - name: content-type
                    prefix_match: application/grpc
                route: { cluster: gloo-grpcserver }
              - match: { prefix: "/" }
                route: { cluster: gloo-ui }
              cors:
                allow_origin: ["*"]
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
                enabled: true
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router
  clusters:
  - name: gloo-grpcserver
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 10101 } }]
  - name: gloo-ui
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 20202 } }]
